# play-rust

./: .clippy.toml  .gitignore  Cargo.toml  README.md  config.json  config.schema.json  config_schema.json  rustfmt.toml
.github/workflows/: ci.yml
connectors/kafka/: Cargo.toml
connectors/kafka/schema/: sink.json  source.json
connectors/kafka/src/: config.rs  lib.rs  sink.rs  source.rs
connectors/mysql/: Cargo.toml  schema.json
connectors/mysql/schema/: sink.json  source.json
connectors/mysql/src/: config.rs  lib.rs  sink.rs  source.rs  type_converter.rs
connectors/postgres/: Cargo.toml
connectors/postgres/schema/: sink.json  source.json
connectors/postgres/src/: config.rs  lib.rs  sink.rs  source.rs
core/: Cargo.toml
core/src/: config.rs  connector.rs  error.rs  job.rs  lib.rs  metrics.rs  sink.rs  types.rs
core/src/plugin/: loader.rs  mod.rs  registry.rs
core/src/runtime/: context.rs  mod.rs
src/: cli.rs  config.rs  job.rs  main.rs
src/plugin/: loader.rs  mod.rs  registry.rs
src/runtime/: context.rs  mod.rs
src/sinks/: mod.rs
src/sources/: mod.rs
src/transforms/: mod.rs
tests/: mysql_tests.rs
tests/common/: mod.rs
transforms/: Cargo.toml
transforms/field_renamer/: Cargo.toml  schema.json
transforms/field_renamer/src/: lib.rs
transforms/src/: lib.rs
ui/: eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
ui/src/: App.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: lib.rs
ui/src/components/: Dashboard.tsx  JobCreator.tsx  Layout.tsx  LoadingScreen.tsx  Sidebar.tsx
ui/src/router/: index.tsx
