[package]
name = "dbsync"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "mysql",
    "postgres",
] }
async-trait = "0.1"
