[workspace]
members = [
    "core",
    "transforms",
    "connectors/mysql",
    "connectors/postgres",
    "connectors/kafka"
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls"] }
tracing = "0.1"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
jsonschema = "0.26.1"
lazy_static = "1.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql"] }
serde_json = "1.0"

[package]
name = "dbsync"
version = "0.1.0"
edition = "2021"

[dependencies]
dbsync-core = { path = "./core" }
dbsync-mysql = { path = "./connectors/mysql", optional = true }
dbsync-postgres = { path = "./connectors/postgres", optional = true }
dbsync-kafka = { path = "./connectors/kafka", optional = true }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3" 
dbsync-transforms = { path = "./transforms" }

[features]
default = ["mysql", "postgres"]
mysql = ["dbsync-mysql"]
postgres = ["dbsync-postgres"]
kafka = ["dbsync-kafka"]

[[test]]
name = "mysql_tests"
path = "tests/mysql_tests.rs"
