[workspace]
members = [
    "core",
    "transforms",
    "connectors/*",
    "ui/src-tauri"
]

[workspace.dependencies]
dbsync = { path = "." }
dbsync-core = { path = "core" }
dbsync-mysql = { path = "connectors/mysql" }
dbsync-postgres = { path = "connectors/postgres" }
dbsync-kafka = { path = "connectors/kafka" }
dbsync-transforms = { path = "transforms" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "mysql", "bigdecimal", "json"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1.83"
lazy_static = "1.4"
jsonschema = "0.26.1"
futures = "0.3"

[package]
name = "dbsync"
version = "0.1.0"
edition = "2021"

[dependencies]
dbsync-core = { workspace = true }
dbsync-mysql = { workspace = true, optional = true }
dbsync-postgres = { workspace = true, optional = true }
dbsync-kafka = { workspace = true, optional = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
dbsync-transforms = { workspace = true }

[features]
default = ["mysql", "postgres"]
mysql = ["dbsync-mysql"]
postgres = ["dbsync-postgres"]
kafka = ["dbsync-kafka"]

[dev-dependencies]
tokio = { workspace = true }
sqlx = { workspace = true, features = ["mysql"] }
serde_json = { workspace = true }

[[test]]
name = "mysql_tests"
path = "tests/mysql_tests.rs"
