[package]
name = "dbsync-mysql"
version = "0.1.0"
edition = "2021"

[dependencies]
dbsync-core = { path = "../../core" }
async-trait = { workspace = true, version = "0.1" }
sqlx = { workspace = true, features = ["mysql", "chrono", "rust_decimal"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
jsonschema = { workspace = true }
lazy_static = { workspace = true } 
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4" 
rust_decimal = "1.36.0"

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }