[package]
name = "dbsync-postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
dbsync-core = { path = "../../core" }
async-trait = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "bigdecimal", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
jsonschema = { workspace = true }
lazy_static = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.32"
time = { version = "0.3", features = ["macros"] } 