[package]
name = "ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
sysinfo = { version = "0.33.0", features = ["serde"] }
chrono = "0.4.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
dbsync = { workspace = true }
dbsync-core = { workspace = true }
dbsync-mysql = { workspace = true }
dbsync-postgres = { workspace = true }

